<resources>
    <string name="app_name">Demo</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>


    <string name="facebook_app_id">264899233952024</string>
    <string name="fb_login_protocol_scheme">fb264899233952024</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="permissions">Permissions</string>
    <string name="label_facebook_login">Facebook Login</string>
    <string name="label_account_kit_login">Account Kit Login</string>
    <string name="de_authorize_app">De-authorize App</string>
    <string name="failed_to_deauth">"failed to deauthorize app %1s"</string>
    <string name="app_not_logged_in">App not logged in</string>
    <string name="success">SUCCESS</string>
    <string name="cancel">CANCEL</string>
    <string name="error">ERROR</string>

    <string-array name="perms_array">
        // User Data Permissions
        <item>basic_info</item>
        <item>public_profile</item>
        <item>email</item>
        <item>publish_actions</item>
        <item>user_about_me</item>
        <item>user_activities</item>
        <item>user_birthday</item>
        <item>user_mobile_phone</item>
        <item>user_education_history</item>
        <item>user_friends</item>
        <item>user_games_activity</item>
        <item>user_hometown</item>
        <item>user_interests</item>
        <item>user_likes</item>
        <item>user_location</item>
        <item>user_photos</item>
        <item>user_posts</item>
        <item>user_relationship_details</item>
        <item>user_relationships</item>
        <item>user_religion_politics</item>
        <item>user_status</item>
        <item>user_tagged_places</item>
        <item>user_videos</item>
        <item>user_website</item>
        <item>user_work_history</item>

        // Other Permissions
        <item>manage_notifications</item>
        <item>read_custom_friendlists</item>
        <item>read_insights</item>
        <item>read_mailbox</item>
        <item>read_stream</item>
        <item>read_audience_network_insights</item>

        // Privacy
        <item>ONLY_ME</item>
        <item>FRIENDS</item>
        <item>EVERYONE</item>
    </string-array>
</resources>
